src/styles/global.css
.time-line-container>div:last-child .education__time>.education__line {
    display: none;
}

.content {
    display: grid;
    margin-top: 2rem;

    h3 {
        font-size: 1.3em;
        text-decoration: underline;
        text-underline-offset: 0.5rem;
    }

    :where(h2):first-child {
        margin-top: 0em;
    }    
}

/* Prose: hack to reduce the whitespace between paragraphs */
.prose :where(p):not(:where([class~=not-prose], [class~=not-prose] *)) {
    /* margin-top: 1em; */
    margin-top: 0em;
    margin-bottom: inherit;
}

.prose {
    line-height: 1.5;
}

code {
    counter-reset: step;
    counter-increment: step 0;

    .line:empty::before {
        display: none;
    }

    .line:last-child:empty {
        display: none;
    }
}

/* Only show line numbers if code block has more than one line */
pre:not([data-language="plaintext"]):not([data-language="text"]) code .line::before {
    content: counter(step);
    counter-increment: step;
    width: 1.5rem;
    margin-right: 1.5rem;
    display: inline-block;
    text-align: right;
    color: rgba(115, 138, 148, .4)
}

